Bug 428400 - Tab title can't be changed with dbus after manual change of it with a double click
Summary: Tab title can't be changed with dbus after manual change of it with a double ...
Status: RESOLVED FIXED
Alias: None
Product: yakuake
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (KDE Platform 4)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-28 19:07 UTC by Esteban Martinena Guerrero
Modified: 2020-11-01 16:54 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Esteban Martinena Guerrero 2020-10-28 19:07:24 UTC
SUMMARY
qdbus org.kde.yakuake /yakuake/tabs org.kde.yakuake.setTabTitle 0 "thenewname" doen't work after changing the title of the tab manually


STEPS TO REPRODUCE
1. execute 
qdbus org.kde.yakuake /yakuake/tabs org.kde.yakuake.setTabTitle 0 "firsttitle"
- it changes
2. Manually change the tab title to "secondtitle"
- it changes
3. execute
qdbus org.kde.yakuake /yakuake/tabs org.kde.yakuake.setTabTitle 0 "lasttitle"
- the tittle doesn't change anymore with qdbus 


OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Esteban Martinena Guerrero 2020-10-29 09:46:06 UTC
Pull request of a probable fix to this:
https://github.com/KDE/yakuake/pull/10/commits/67f152fa1c3688153f41f0b81923196ff4d2f59d
Comment 2 Nicolas Fella 2020-11-01 16:51:07 UTC
Git commit ab4019e949c0372b06069ece4023ced96dd7aefc by Nicolas Fella, on behalf of Esteban Martinena Guerrero.
Committed on 01/11/2020 at 16:51.
Pushed by nicolasfella into branch 'master'.

Consider renaming tabs via DBus interactive. This allows it to override a previouly interactively set title.

M  +2    -2    app/mainwindow.cpp
M  +10   -16   app/tabbar.cpp
M  +3    -3    app/tabbar.h

https://invent.kde.org/utilities/yakuake/commit/ab4019e949c0372b06069ece4023ced96dd7aefc
Comment 3 Nicolas Fella 2020-11-01 16:51:42 UTC
Git commit e1b2ed353e6118b9f9c8289ac5a6725135dfab73 by Nicolas Fella, on behalf of Esteban Martinena Guerrero.
Committed on 01/11/2020 at 16:51.
Pushed by nicolasfella into branch 'release/20.08'.

Consider renaming tabs via DBus interactive. This allows it to override a previouly interactively set title.


(cherry picked from commit ab4019e949c0372b06069ece4023ced96dd7aefc)

M  +2    -2    app/mainwindow.cpp
M  +10   -16   app/tabbar.cpp
M  +3    -3    app/tabbar.h

https://invent.kde.org/utilities/yakuake/commit/e1b2ed353e6118b9f9c8289ac5a6725135dfab73