Consider renaming tabs via DBus interactive. This allows it to override a previouly interactively set title.

BUG: 428400


(cherry picked from commit ab4019e949c0372b06069ece4023ced96dd7aefc)